force-app/main/default/objects/Compliance_Activity__c/Compliance_Activity__c.object-meta.xml
<CustomObject>
    <label>Compliance Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>