force-app/main/default/objects/Compliance_Activity__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compliance_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>