force-app/main/default/objects/Compliance_Activity__c/fields/Summary_of_Advice_Given__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Advice_Given__c</fullName>
    <label>Summary of Advice Given</label>
    <length>64000</length>
    <type>Html</type>
</CustomField>