force-app/main/default/objects/Compliance_Activity__c/fields/Summary_of_Decisions_Made__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Decisions_Made__c</fullName>
    <label>Summary of Decisions Made</label>
    <length>64000</length>
    <type>Html</type>
</CustomField>