force-app/main/default/objects/Compliance_Activity__c/fields/Time_Expended__c.field-meta.xml
<CustomField>
    <fullName>Time_Expended__c</fullName>
    <label>Time Expended (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>