force-app/main/default/objects/Compliance_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Frequency__c</columns>
    <columns>Responsible_Person__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>